# Enterprise-Zapp

./: .gitignore  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.ps1
.claude/: settings.json
.claude/agents/: code-reviewer.md  report-designer.md  signal-engineer.md  test-runner.md
examples/: sample-report.html
src/: analyzer.py  auth.py  ca_analyzer.py  cli.py  collector.py  graph.py  reporter.py
templates/: report.html.j2
tests/: test_analyzer.py  test_ca_analyzer.py  test_reporter.py
tests/fixtures/: sample_sps.json
